Fix: z-index

--- a/src/components/Banner/Banner.module.scss
+++ b/src/components/Banner/Banner.module.scss
@@ -35,10 +35,10 @@
     0%{
         opacity: 0;
         transform: translateY(-250px);
-        z-index: 999;
+        z-index: 1;
     }
     100%{
-        z-index: 999;
+        z-index: 1;
         opacity: 1;
         transform: translateY(0px);
     }
